# camera-control-tool

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  cli.hpp  edsdk_wrapper.cpp  edsdk_wrapper.hpp  logger.hpp  main.cpp
